--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@react-native-firebase/auth": "^20.0.0",
     "@react-native-firebase/crashlytics": "^20.0.0",
     "@react-native-firebase/database": "^20.0.0",
+    "@react-native-firebase/firestore": "^20.0.0",
     "@react-native-firebase/messaging": "^20.0.0",
     "@react-native-firebase/storage": "^20.0.0",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "expo": "~51.0.8",
+    "expo-build-properties": "~0.12.1",
     "expo-dev-client": "~4.0.14",
     "expo-modules-autolinking": "~1.1.0",
     "expo-router": "~3.5.14",
@@ -26,8 +28,7 @@
     "react": "18.2.0",
     "react-native": "0.74.1",
     "react-native-safe-area-context": "4.10.1",
-    "react-native-screens": "3.31.1",
-    "expo-build-properties": "~0.12.1"
+    "react-native-screens": "3.31.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
