--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-firebase/app": "^20.0.0",
     "@react-native-firebase/auth": "^20.0.0",
     "@react-native-firebase/crashlytics": "^20.0.0",
@@ -28,15 +29,21 @@
     "expo-modules-autolinking": "~1.1.0",
     "expo-router": "~3.5.14",
     "expo-status-bar": "~1.12.1",
-    "firebase": "^10.12.1",
+    "firebase": "^10.12.2",
     "react": "18.2.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-native": "0.74.1",
+    "react-native-appearance": "^0.3.4",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-element-dropdown": "^2.12.0",
+    "react-native-event-listeners": "^1.0.7",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-gifted-chat": "^2.4.0",
+    "react-native-picker-select": "^9.1.3",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
+    "react-native-sectioned-multi-select": "^0.10.0",
     "react-native-vector-icons": "^10.1.0",
     "write-file-atomic": "^5.0.1"
   },
