--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "react-native": "0.74.1",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-element-dropdown": "^2.12.0",
-    "react-native-gesture-handler": "~2.16.1",
+    "react-native-gesture-handler": "^2.17.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
