--- a/app.json
+++ b/app.json
@@ -50,6 +50,10 @@
         "projectId": "68b42165-027c-489d-9308-52a44abf606b"
       }
     },
-    "owner": "tunegethertest"
+    "owner": "tunegethertest",
+    "runtimeVersion": "1.0.0",
+    "updates": {
+      "url": "https://u.expo.dev/68b42165-027c-489d-9308-52a44abf606b"
+    }
   }
 }
