--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "react-native-screens": "^3.31.1",
     "react-native-sectioned-multi-select": "^0.10.0",
     "react-native-vector-icons": "^10.1.0",
-    "write-file-atomic": "^5.0.1"
+    "write-file-atomic": "^5.0.1",
+    "expo-updates": "~0.25.18"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
