--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "expo start",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "test": "jest"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.23.1",
@@ -26,9 +27,11 @@
     "expo": "~51.0.8",
     "expo-build-properties": "~0.12.1",
     "expo-dev-client": "~4.0.14",
+    "expo-image-picker": "^15.0.7",
     "expo-modules-autolinking": "~1.1.0",
     "expo-router": "~3.5.14",
     "expo-status-bar": "~1.12.1",
+    "expo-updates": "~0.25.18",
     "firebase": "^10.12.2",
     "react": "18.2.0",
     "react-firebase-hooks": "^5.1.1",
@@ -39,17 +42,31 @@
     "react-native-event-listeners": "^1.0.7",
     "react-native-gesture-handler": "^2.17.1",
     "react-native-gifted-chat": "^2.4.0",
+    "react-native-image-picker": "^7.1.2",
     "react-native-picker-select": "^9.1.3",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
     "react-native-sectioned-multi-select": "^0.10.0",
     "react-native-vector-icons": "^10.1.0",
-    "write-file-atomic": "^5.0.1",
-    "expo-updates": "~0.25.18"
+    "write-file-atomic": "^5.0.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@babel/preset-env": "^7.24.8",
+    "@babel/preset-react": "^7.24.7",
+    "@babel/preset-typescript": "^7.24.7",
+    "@testing-library/react-native": "^12.0.0",
+    "babel-jest": "^29.7.0"
+  },
+  "jest": {
+    "preset": "react-native",
+    "transform": {
+      "^.+\\.[t|j]sx?$": "babel-jest"
+    },
+    "transformIgnorePatterns": [
+      "node_modules/(?!(jest-)?react-native|@react-native|react-native|@react-native-community|@react-navigation)"
+    ]
   },
   "private": true
 }
