--- a/package.json
+++ b/package.json
@@ -50,7 +50,6 @@
     "react-native-screens": "^3.31.1",
     "react-native-sectioned-multi-select": "^0.10.0",
     "react-native-vector-icons": "^10.1.0",
-    "react-test-renderer": "^18.2.0",
     "write-file-atomic": "^5.0.1"
   },
   "devDependencies": {
@@ -58,9 +57,11 @@
     "@babel/preset-env": "^7.24.8",
     "@babel/preset-react": "^7.24.7",
     "@babel/preset-typescript": "^7.24.7",
+    "@testing-library/react": "^13.4.0",
     "@testing-library/react-native": "^12.5.1",
+    "babel-jest": "^29.7.0",
     "eslint-plugin-testing-library": "^6.2.2",
-    "babel-jest": "^29.7.0"
+    "react-test-renderer": "^18.2.0"
   },
   "jest": {
     "preset": "react-native",
